@@ -15,6 +15,8 @@
         - Introduce X-Frame-Options header.
         - Introduce X-XSS-Protection header.
         - Support CSP in notifications framework.
+        - Fetch plugin configs from JSON file to be
+          CSP compliant.
 
 0.40 2020-12-17
         - Modernize ES and fix in-loops.
